examples/test/testpolicy3051.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3051
  namespace: namespace335
spec:
  podSelector:
    matchLabels:
      key48: value11
      key45: value6
      key18: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value34
      podSelector:
        matchLabels:
          key40: value3
          key26: value2
          key13: value30
